frontend_test_log_2.txt

> mruak-fe@0.1.0 test
> react-scripts test --watchAll=false

FAIL src/components/Customer/CustomerCreate.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    D:\Maruka\V1\MarukaERPFE\node_modules\axios\index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import axios from './lib/axios.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

    [0m [90m 1 |[39m [90m// src/api/api.js[39m
    [31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m axios [36mfrom[39m [32m'axios'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 3 |[39m
     [90m 4 |[39m [90m// ---- Base URL (CRA-safe) ----[39m
     [90m 5 |[39m [90m// Priority: REACT_APP_API_URL env -> window.__API_URL__ -> localhost fallback[39m[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/api/api.js:2:1)
      at Object.<anonymous> (src/components/Customer/CustomerCreate.js:3:1)
      at Object.<anonymous> (src/components/Customer/CustomerCreate.test.js:3:1)

FAIL src/components/Project/ProjectCreate.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    D:\Maruka\V1\MarukaERPFE\node_modules\axios\index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import axios from './lib/axios.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

    [0m [90m 1 |[39m [90m// src/api/api.js[39m
    [31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m axios [36mfrom[39m [32m'axios'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 3 |[39m
     [90m 4 |[39m [90m// ---- Base URL (CRA-safe) ----[39m
     [90m 5 |[39m [90m// Priority: REACT_APP_API_URL env -> window.__API_URL__ -> localhost fallback[39m[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/api/api.js:2:1)
      at Object.<anonymous> (src/components/Project/ProjectCreate.js:13:1)
      at Object.<anonymous> (src/components/Project/ProjectCreate.test.js:3:1)

FAIL src/App.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    D:\Maruka\V1\MarukaERPFE\node_modules\axios\index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import axios from './lib/axios.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

    [0m [90m 1 |[39m [90m// src/api/api.js[39m
    [31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m axios [36mfrom[39m [32m'axios'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 3 |[39m
     [90m 4 |[39m [90m// ---- Base URL (CRA-safe) ----[39m
     [90m 5 |[39m [90m// Priority: REACT_APP_API_URL env -> window.__API_URL__ -> localhost fallback[39m[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/api/api.js:2:1)
      at Object.<anonymous> (src/context/AuthContext.js:4:1)
      at Object.<anonymous> (src/components/Login.js:4:1)
      at Object.<anonymous> (src/App.js:15:1)
      at Object.<anonymous> (src/App.test.js:2:1)

FAIL src/components/Login.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    D:\Maruka\V1\MarukaERPFE\node_modules\axios\index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import axios from './lib/axios.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

    [0m [90m 1 |[39m [90m// src/api/api.js[39m
    [31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m axios [36mfrom[39m [32m'axios'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 3 |[39m
     [90m 4 |[39m [90m// ---- Base URL (CRA-safe) ----[39m
     [90m 5 |[39m [90m// Priority: REACT_APP_API_URL env -> window.__API_URL__ -> localhost fallback[39m[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/api/api.js:2:1)
      at Object.<anonymous> (src/context/AuthContext.js:4:1)
      at Object.<anonymous> (src/components/Login.js:4:1)
      at Object.<anonymous> (src/components/Login.test.js:3:1)

Test Suites: 4 failed, 4 total
Tests:       0 total
Snapshots:   0 total
Time:        105.92 s
Ran all test suites.
